# ship-MTA-draft

./: .coveragerc  .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  .secrets.baseline  AGENT_LEARNINGS  BRANCH_MIGRATION_PLAN.md  CHANGELOG.md  CI_CD_SETUP.md  CLOUDINARY_MIGRATION.md  CODEBASE_ANALYSIS.md  Chat 1 complete.md  Claude.md  DATA_LOSS_FIX.md  DEPLOYMENT.md  DEVELOPMENT.md  Dockerfile  ENGINEER_TASKS.md  MIGRATION_INSTRUCTIONS.md  MIGRATION_SETUP.md  Makefile  PERFORMANCE_OPTIMIZATIONS.md  PHASE1_COMPLETE.md  PHASE3_CODEX_REVIEW_SUMMARY.md  PHOTO_PERSISTENCE_FIX.md  README.md  SECURITY_AUDIT_REPORT.md  SECURITY_IMPROVEMENTS.md  SHIP_MAINTENANCE_APP_BUILD_GUIDE.md  STAGING_SETUP.md  TESTING_CHECKLIST.md  TESTING_PR1_FRONTEND.md  TESTING_SETUP_COMPLETE.md  TEST_RESULTS.md  VERIFICATION_REPORT.md  WORKFLOW.md  WORKFLOW_STATE.json  (+17 more)
.claude/prompts/: architecture-review-agent.md  code-quality-review-agent.md  performance-review-agent.md  security-review-agent.md
.claude/skills/: phase3-codex-review.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: cd.yml  ci.yml  codeql.yml  dependency-updates.yml
AGENT_PROMPTS/: 1_Testing_Engineer.md  2_Cloud_Infrastructure_Engineer.md  3_Security_Engineer.md  4_DevOps_Engineer.md  5_Performance_Engineer.md  COORDINATION.md  GIT_WORKFLOW.md  README.md
app/: __init__.py  admin.py  auth.py  cloudinary_utils.py  crew.py  docx_generator.py  models.py  notifications.py  performance.py  security.py  utils.py
app/templates/: 404.html  (+11 more)
multi-agent-workflow/: INSTALLATION.md  QUICK_REFERENCE.md  README.md
tests/: README.md  conftest.py  test_admin.py  test_app.py  test_auth.py  test_crew.py  test_docx_generator.py  test_models.py  test_notifications.py  test_routes.py  test_utils.py
(+25 files in other folders)
